// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Choice class should convert to task definitions 1`] = `
[
  {
    "choices": {
      "decision1": "activity1",
      "decision2": "activity2",
    },
    "fn": [Function: AsyncFunction],
    "name": "id",
    "type": "choice",
  },
  {
    "catch": undefined,
    "fn": [Function: AsyncFunction],
    "name": "activity1",
    "then": null,
    "type": "activity",
  },
  {
    "catch": undefined,
    "fn": [Function: AsyncFunction],
    "name": "activity2",
    "then": null,
    "type": "activity",
  },
]
`;

exports[`Choice class should run the choices based on the output of the choice function 1`] = `
{
  "context": {},
  "output": null,
  "success": true,
  "transitions": [
    {
      "from": null,
      "nextInput": "initial input",
      "to": {
        "choices": {
          "decision1": "activity1",
          "decision2": "activity2",
        },
        "fn": [class Function],
        "name": "id",
        "type": "choice",
      },
      "transitionName": "(start)",
    },
    {
      "from": {
        "choices": {
          "decision1": "activity1",
          "decision2": "activity2",
        },
        "fn": [class Function],
        "name": "id",
        "type": "choice",
      },
      "nextInput": "initial input",
      "to": {
        "catch": undefined,
        "fn": [class Function],
        "name": "activity1",
        "then": null,
        "type": "activity",
      },
      "transitionName": "decision1",
    },
    {
      "from": {
        "catch": undefined,
        "fn": [class Function],
        "name": "activity1",
        "then": null,
        "type": "activity",
      },
      "nextInput": null,
      "to": null,
      "transitionName": "(end)",
    },
  ],
}
`;
